--- a/A - Species inference from movement acoustics.ipynb
+++ b/A - Species inference from movement acoustics.ipynb
@@ -28,6 +28,8 @@
    "source": [
     "### The Big Problem\n",
     "\n",
+    "There are two main reasons to want to avoid using cameras and lighting to observe animals in deep ocean environments. The first is simply the energy use. LED lights are battery-draining, particularly because you need to shine them at a high intensity to pick up anything underwater. The second is that lighting disturbs the animals, which can distort your data. \n",
+    "\n",
     "Natural light from the ocean surface diminishes rapidly with depth. The twilight zone begins around 200 meters and extends down to the midnight zone at roughly 1,000 meters. In these low-light environments, many creatures evolve larger eyes to maximize photon capture, and even below 1,000 meters, some species continue to use light, often bioluminescent, to attract prey.\n",
     "\n",
     "Some examples include:\n",
@@ -38,17 +40,9 @@
     "4. Zooplankton, which are strongly attracted to light. ROV lights frequently gather clouds of zooplankton, altering the local ecosystem and affecting predator-prey interactions.\n",
     "5. Hatchetfish (Sternoptychidae), down to ~1,300 m. Their upward-facing eyes are specialized to detect shadows and silhouettes from above.\n",
     "\n",
-    "This highlights a key challenge for observing deep-sea creatures: how can we monitor them without disturbing their natural behavior? Currently, cameras and artificial lighting are the primary tools for recording movement, but these almost certainly induce abnormal behavior in many species. Some individuals may approach the light, while others are repelled.\n",
-    "\n",
     "### A Plausible Alternative: Acoustics\n",
     "\n",
-    "One potential solution is to use acoustic monitoring. Hydrophones can detect the sounds and movements of creatures without the need for light. However, a single hydrophone provides limited information underwater: sound attenuates and scatters rapidly, and signals are convolved by the medium. Unlike on land, where a microphone might allow rough species identification, underwater observation typically requires an array of hydrophones to reconstruct spatial information.\n",
-    "\n",
-    "Imagine a scenario in which a creature moves within a medium surrounded by hydrophones. By recording the pressure signals over time at multiple positions, we can ask:\n",
-    "\n",
-    "What can be inferred about the creature’s movement?\n",
-    "\n",
-    "What can be inferred about its morphology or size?\n",
+    "One potential alternative is acoustic monitoring. Hydrophones detect changes in pressure, which could plausibly be reversed to infer the species. However, a single hydrophone will provide limited information underwater, as sound attenuates rapidly and signals are convolved by the medium. Unlike on land, where a microphone might allow rough species identification, underwater observation will probably require an array of hydrophones.\n",
     "\n",
     "With a limited number of hydrophones, exact reconstruction of detailed behavior may be impossible. Nonetheless, it may still be feasible to classify creatures into distinct types, which is valuable for population monitoring, conservation, and ecological studies.\n",
     "\n",
