--- a/B - Location optimization with Gaussian Processes.ipynb
+++ b/B - Location optimization with Gaussian Processes.ipynb
@@ -21,13 +21,13 @@
     "\n",
     "In *A - Species inference from movement acoustics*, I discussed using hydrophones to classify deep-sea creatures from the acoustic signatures of their movements. Here, I want to pivot slightly to a closely related problem: how to find animal hotspots in the first place. Say we want to measure biodiversity. In order to generate good statistics we need lots of data, which means going to high species density places. Our goal is to identify regions rich in observable wildlife. \n",
     "\n",
-    "The difficulty is that collecting observations is slow and expensive. At the moment optimizing species density requires deploying equipment, descending to depth, capturing sufficient video, returning to the surface, analyzing it, and then possibly relocating to a new site.\n",
+    "The difficulty is that collecting observations is slow and expensive. At the moment optimising species density requires deploying equipment, descending to depth, capturing sufficient video, returning to the surface, analysing it, and then possibly relocating to a new site.\n",
     "\n",
     "Each data point is costly, so we need methods that make sampling as efficient as possible. Fortunately, machine learning offers tools designed specifically for sample-efficient exploration.\n",
     "\n",
     "### The Solution: Gaussian Processes\n",
     "\n",
-    "Gaussian Processes (GPs) are particularly well suited to this task because they provide not only predictions, but also uncertainty estimates at unobserved locations. This allows us to compute the *expected improvement* of sampling at a new site and choose the location that maximizes this quantity.\n",
+    "Gaussian Processes (GPs) are particularly well suited to this task because they provide not only predictions, but also uncertainty estimates at unobserved locations. This allows us to compute the *expected improvement* of sampling at a new site and choose the location that maximises this quantity.\n",
     "\n",
     "#### A brief overview\n",
     "\n",
