--- a/D - Location optimization with an energy budget.ipynb
+++ b/D - Location optimization with an energy budget.ipynb
@@ -22,14 +22,14 @@
     "\n",
     "In *B - Location optimisation with Gaussian Processes* I looked at how you can choose a good location while minimizing the number of samples that you take. The solution was to use a Gaussian process and maximize the expected improvement at each sample. Now we turn to a related problem. In the real world, robots are not limited by the number of samples, but rather by the size of their batteries. Taking samples and moving both incur costs. Given a fixed energy budget, how do you determine where to sample?\n",
     "\n",
-    "If each robot $i$ travels some path $P_i$, sampling at each location, we want to choose these paths to maximize the final sample obtained, subject to an energy budget:\n",
+    "If each robot $i$ travels some path $P_i$, sampling at each location, we want to choose these paths to maximise the final sample obtained, subject to an energy budget:\n",
     "$$\n",
     "\\max_{P_1,\\dots,P_n} F(\\text{observations along } \\cup_i P_i)\n",
     "\\quad \\text{subject to} \\quad C(P_i) \\le B \\;\\; \\forall i,\n",
     "$$\n",
     "where $B$ is the available budget and $F(\\cdot)$ is the function.\n",
     "\n",
-    "This relates to the well-known Multi-robot Informative Path Planning (MIPP) problem, where you want to choose a math which maximizes the information gained. This is a good starting point, as mutual information has some nice properties (diminishing returns, always increasing with each sample, normalized) which make it suitable for greedy algorithms. We can start by thinking about how to maximize information gained and then think about how to maximize any function at the robot's final location.\n",
+    "This relates to the well-known Multi-robot Informative Path Planning (MIPP) problem, where you want to choose a math which maximises the information gained. This is a good starting point, as mutual information has some nice properties (diminishing returns, always increasing with each sample, normalized) which make it suitable for greedy algorithms. We can start by thinking about how to maximise information gained and then think about how to maximise any function at the robot's final location.\n",
     "\n",
     "### A brief detour into information theory\n",
     "\n",
@@ -298,7 +298,7 @@
     "\n",
     "$$=\\frac{1}{2}\\log\\frac{|\\Sigma_{11}||\\Sigma_{22}|}{|\\Sigma|}$$\n",
     "\n",
-    "So we can calculate the mutual information without actually observing anything. Unfortunately it's still expensive in the number of options! And we also aren't actually optimizing the function, we're maximizing the mutual information. So can we do better? In the original paper above they use a grid and then branch and bound techniques on it using the submodularity benefits of mutual information. \n",
+    "So we can calculate the mutual information without actually observing anything. Unfortunately it's still expensive in the number of options! And we also aren't actually optimising the function, we're maximising the mutual information. So can we do better? In the original paper above they use a grid and then branch and bound techniques on it using the submodularity benefits of mutual information. \n",
     "\n",
     "### A solution?\n",
     "\n",
