--- a/E - Optimization with rare events.ipynb
+++ b/E - Optimization with rare events.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### The Big Problem\n",
     "\n",
-    "In notebook $B$, I explored how Gaussian Process optimization can be used to maximize an unknown function while remaining sample-efficient. In notebook $D$, I extended this setting to account for energy constraints, where moving between sampling locations incurs a limited budgetary cost. In both cases, I assumed that the function of interest could be observed directly at a chosen location.\n",
+    "In Notebook B, I explored how Gaussian Process optimisation can be used to maximise an unknown function while remaining sample-efficient. In Notebook D, I extended this setting to account for energy constraints, where moving between sampling locations incurs a limited budgetary cost. In both cases, I assumed that the function of interest could be observed directly at a chosen location.\n",
     "\n",
     "In many real deployments, this assumption does not hold. For example, when an autonomous vehicle is tasked with locating regions of high animal density, the density itself is never observed. Instead, the vehicle receives only binary observations at each timestep (e.g. whether an animal is detected or not).\n",
     "\n",
@@ -517,13 +517,13 @@
    "source": [
     "Nice! So the robot here can take its current trajectory and the events over time and calculate a reasonable estimate for the original events-per-unit-time function!\n",
     "\n",
-    "One option is to just try and optimize straight away. Or maybe we do something more like Thompson Sampling from before? How do you plan a trajectory? Else what about doing so on an energy budget? Fortunately in this scenario there isn't a cost to sample.\n",
+    "One option is to just try and optimise straight away. Or maybe we do something more like Thompson Sampling from before? How do you plan a trajectory? Else what about doing so on an energy budget? Fortunately in this scenario there isn't a cost to sample.\n",
     "\n",
     "What I would like to do now is approach this problem properly. Just dealing with a given robot trajectory means inverting an **Inhomogeneous Poisson process**. But then you also need to make inferences about the surrounding landscape, AND THEN, if you're feeling up for a challenge you need to get the robot moving in the right direction. Bonus points for doing so on an energy budget.\n",
     "\n",
     "A good research question could be this:\n",
     "\n",
-    "*How do you optimize the direction of a moving sampler on an Inhomogenous Poisson Process?*"
+    "*How do you optimise the direction of a moving sampler on an Inhomogenous Poisson Process?*"
    ]
   }
  ],
